# nercone-webserver

./: .gitignore  CLAUDE.md  Dockerfile  clean.sh  docker-compose.yml  docker-run.sh  main.py  nercone-website-autoupdater.service  nercone-website-autoupdater.timer  nercone-website.service  pyproject.toml  requirements.txt  shorturls.json  start.sh  update-contents.sh  update.sh
.claude/: launch.json
files/: site.webmanifest  sitemap.xml
files/assets/favicon/: site.webmanifest
files/assets/images/: favicon.ai  nercone.ai  nercone_banner.ai  nercone_icon.ai  nercone_icon_dark.ai  nercone_icon_default.ai  nercone_icon_light.ai
files/assets/styles/: main.css
html/: about.html  access-counter.html  base.html  cledit.html  index.html  links.html  projects.html
html/blog/: base.html  index.html
html/blog/article/: how-to-disable-setrubleshoot.html
html/cledit/: fastget.html  webserver.html
html/to/: 404.html
public/: access-counter.html  base.html  links.html  quotes.txt  shorturls.json
src/nercone_webserver/: __main__.py  server.py
src/nercone_website/: __main__.py  app.py  config.py  constants.py  database.py  databases.py  error.py  logger.py  manager.py  middleware.py  proxy.py  renderer.py  resolver.py  server.py  templates.py  thumbnail.py
static/: sitemap.xml
templates/: 404.html  about.html  access-counter.html  base.html  credit.html  download-banner.html  gnupg.html  index.html  links.html  projects.html  public-key.html
templates/blog/: base.html  index.html
templates/credit/: fastget.html  webserver.html
templates/to/: 404.html
(+4 files in other folders)
