[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-website"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "websockets",
    "httpx[http2]",

    "fastapi",
    "uvicorn[standard]",

    "beautifulsoup4",

    "jinja2",
    "resvg-py",

    "mistune",
    "markitdown",

    "minify-html",
    "rcssmin",
    "rjsmin",
    "scour"
]

[project.scripts]
nercone-website = "nercone_website.__main__:main"
